# L4C-chrono

./: LICENSE  README.md
acado_testProject/: CMakeLists.txt  backups2.txt  bioreactor1  bioreactor1.cpp  c2a.txt  demo  demoAcado.cpp  lqr.cpp  lqr1  matlab.m  mpcTest  mpcTest1  mpc_vehicle.cpp  mpc_vehicle1.cpp  mpc_vehicle1RTA.cpp  out.txt  ref.txt  ref1.txt  rocketTest  s2a.txt  s3.txt
acado_testProject/mpc_export/: acado_common.h  acado_integrator.c  acado_solver.c  make_acado_solver_sfunction.m
l4c/: CMakeLists.txt  DLC_with_SCM.cpp  HMW_scm.cpp  HMW_scm_v1.cpp  HMW_scm_v2.cpp  f.cpp  mpc_vehicle.cpp  offroad_scm.cpp
