#
# Project settings
#

# Minimum required version of cmake
CMAKE_MINIMUM_REQUIRED( VERSION 3.6 )

# Project name and programming languages used
PROJECT( MY_ACADO_PROJECT CXX )

# CMake module(s) path
SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR} )

#
# Prerequisites
#
FIND_PACKAGE( ACADO REQUIRED )

#
# Include directories
#
INCLUDE_DIRECTORIES( . ${ACADO_INCLUDE_DIRS} )

#
# Build an executable
#
ADD_EXECUTABLE(rocketTest rocket.cpp)
# Linux and OS X
TARGET_LINK_LIBRARIES(rocketTest ${ACADO_SHARED_LIBRARIES} )
# Windows
#TARGET_LINK_LIBRARIES( <EXEC_NAME> ${ACADO_STATIC_LIBRARIES} )
SET_TARGET_PROPERTIES(rocketTest
                       PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )


ADD_EXECUTABLE(mpcTest mpc_vehicle.cpp)
TARGET_LINK_LIBRARIES(mpcTest ${ACADO_SHARED_LIBRARIES} )
SET_TARGET_PROPERTIES(mpcTest
                        PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_EXECUTABLE(bioreactor1 bioreactor1.cpp)
TARGET_LINK_LIBRARIES(bioreactor1 ${ACADO_SHARED_LIBRARIES} )
SET_TARGET_PROPERTIES(bioreactor1
                        PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_EXECUTABLE(lqr1 lqr.cpp)
TARGET_LINK_LIBRARIES(lqr1 ${ACADO_SHARED_LIBRARIES} )
SET_TARGET_PROPERTIES(lqr1
                        PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )


ADD_EXECUTABLE(mpcTest1 mpc_vehicle1.cpp)
TARGET_LINK_LIBRARIES(mpcTest1 ${ACADO_SHARED_LIBRARIES} )
SET_TARGET_PROPERTIES(mpcTest1
                        PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_EXECUTABLE(demo demoAcado.cpp)
TARGET_LINK_LIBRARIES(demo ${ACADO_SHARED_LIBRARIES} )
SET_TARGET_PROPERTIES(demo
                        PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
                    
                        
